style.css
/* ... */
.select--salon .selectric-selectric_pdp .selectric .button,
.select--service .selectric-selectric_pdp .selectric .button,
.select--school-course .selectric-selectric_pdp .selectric .button,
.select--gift-cards .selectric-selectric_pdp .selectric .button {
	display: none;
}

.selectric-selectric_pdp .selectric .button:after {
	display: none;
}

.selectric-selectric_pdp .selectric-items {
	top: calc(100% + 8px);
	border: 0;
	border-radius: 4px;
	overflow: hidden;
	box-shadow: none;
}

.selectric-selectric_pdp .selectric-items li,
.selectric-selectric_pdp .selectric-items ul {
	font-size: 14px;
}

.selectric-selectric_pdp .selectric-items li:hover,
.selectric-selectric_pdp .selectric-items li.selected {
	color: #FFFFFF;
	background: var(--pdp-primary);
}


/**
 *  Toggle
 */
.toggle {
	display: flex;
	align-items: center;
}

.toggle__label {
	font-size: 16px;
	font-weight: bold;
}

.toggle__input-wrap {
	position: relative;
	display: inline-block;
	width: 40px;
	height: 16px;
	margin: 0 10px;
}

.toggle__input {
	opacity: 0;
	width: 0;
	height: 0;
}

.toggle__slider {
	position: absolute;
	cursor: pointer;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: white;
	border-radius: 36px;
	border: 2px solid #C4C4C4;
	-webkit-transition: .4s;
	transition: .4s;
}

.toggle__slider:before {
	position: absolute;
	content: "";
	height: 10px;
	width: 10px;
	left: 1px;
	bottom: 1px;
	background-color: var(--pdp-primary);
	border-radius: 50%;
	-webkit-transition: .4s;
	transition: .4s;
}

.toggle__input:checked+.toggle__slider:before {
	-webkit-transform: translateX(24px);
	-ms-transform: translateX(24px);
	transform: translateX(24px);
}


/**
 *  Form
 */
.form {
	position: relative;
	margin-bottom: 0;
}

.form__fields {
	position: relative;
}

.form .form__fields:after,
.form.cart:after {
	content: "";
	visibility: hidden;
	position: absolute;
	display: block;
	top: calc(50% - 14px);
	left: calc(50% - 14px);
	width: 28px;
	height: 28px;
	border: 4px solid var(--pdp-primary);
	border-top-color: transparent;
	border-radius: 50%;
	opacity: 0;
	transition: opacity 300ms ease, visibility 300ms ease;
	animation: loader-spin 1s linear infinite;
	z-index: 10001;
}

.form.loading .form__fields:after,
.form.cart.loading:after {
	visibility: visible;
	opacity: 1;
}

@keyframes loader-spin {
	from {
		transform: rotateZ(0deg);
	}

	to {
		transform: rotateZ(360deg);
	}
}

.form__response {
	display: none;
	padding: 20px;
	border-radius: 4px;
}

.form__response.active {
	display: block;
	border: 2px solid;
}

.form__response.active.success {
	border-color: yellowgreen;
}

.form__response.active.error {
	border-color: red;
}

.form__response ul {
	margin: 0;
	padding: 0 0 0 16px;
}

.form__submit {
	margin-top: 32px;
	text-align: center;
}

.form-row {
	display: grid;
	grid-gap: 8px;
}

.form-row:not(:last-child) {
	margin-bottom: 8px;
}

.form-row.form-row--two {
	grid-template-columns: 1fr 1fr;
}


/**
 *  Unordered List - Style 1
 */
.ul_style-01 {
	list-style: none;
	margin: 0;
	padding: 6px 0 0 0;
}

.ul_style-01 > li {
	position: relative;
	padding-left: 30px;
}

.ul_style-01 > li:not(:last-child) {
	margin-bottom: 24px;
}

.ul_style-01 > li:before {
	content: "";
	position: absolute;
	display: block;
	flex-shrink: 0;
	width: 18px;
	height: 1px;
	top: 10px;
	left: 0;
	background: black;
}


/**
 *  Ordered List - Style 1
 */
.ol_style01 {
	counter-reset: counterStyle01;
	margin: 0;
	padding: 0;
	font-weight: bold;
	font-size: 16px;
	line-height: 14px;
}

.ol_style01 li {
	list-style: none;
	display: flex;
	margin-bottom: 30px;
	padding-top: 6px;
}

.ol_style01 li:last-child {
	margin-bottom: 0;
}

.ol_style01 li:before {
	counter-increment: counterStyle01;
	content: counter(counterStyle01);
	position: relative;
	display: block;
	top: -5px;
	width: 18px;
	margin-right: 3px;
	text-align: center;
	font-size: 28px;
	font-weight: bold;
}


/**
 *  Ordered List - Style 2
 */
.ol_style02 {
	counter-reset: counterStyle02;
	margin: 0;
	padding: 0;
	font-size: 16px;
	line-height: 15px;
}

.ol_style02 li {
	display: flex;
	max-width: 530px;
	margin-bottom: 40px;
}

.ol_style02 li:last-child {
	margin-bottom: 0;
}

.ol_style02 li:before {
	counter-increment: counterStyle02;
	content: counter(counterStyle02);
	position: relative;
	display: block;
	top: -2px;
	width: 40px;
	margin-right: 8px;
	font-weight: bold;
	font-size: 56px;
	line-height: 54px;
	text-align: center;
}


/**
 *  Ordered List - Style 3
 */
.ol_style-03 {
	counter-reset: counterStyle03;
	margin: 0;
	padding: 0;
}

.ol_style-03 li {
	list-style: none;
	display: flex;
	margin-bottom: 30px;
}

.ol_style-03 li:last-child {
	margin-bottom: 0;
}

.ol_style-03 li:before {
	counter-increment: counterStyle03;
	content: counter(counterStyle03, decimal-leading-zero);
	display: block;
	margin-right: 12px;
	color: var(--pdp-primary);
	font-weight: bold;
	font-size: 18px;
	line-height: 17px;
}


/**
 *  Header
 */
header.main-header {
	position: fixed;
	top: 0;
	width: 100%;
	z-index: 10000;
}

body.admin-bar header.main-header {
	top: 32px;
}

body.admin-bar header.main-header.fixed,
header.main-header.fixed {
	top: -105px;
	transition: top 0.5s ease;
}

body.admin-bar header.main-header.fixed.active,
header.main-header.fixed.active {
	top: 0;
}

.header.header_desktop{
	background: rgba(249, 249, 249, 0.97);
}

.header.header_desktop > .container {
	display: flex;
	justify-content: space-between;
	align-items: center;
	height: 90px;
}

@keyframes header-slideIn{
	from{
		transform: translateY(-100%);
	}
	to{
		transform: translateY(0);
	}
}


/**
 *  Mobile header
 */
.header.header_mobile {
	position: relative;
	display: none;
	padding: 23px 0 28px;
	background: rgba(249, 249, 249, 0.97);
	z-index: 4;
}

.header.header_mobile > .container {
	display: flex;
	align-items: center;
	justify-content: space-between;
}


/**
 * Reset WP menu styles
 */
.menu {
	list-style: none;
	margin: 0;
	padding: 0;
}
/* ... */

